#12301 - Custom Patch Method for MB

--- a/profile/modules/os/modules/os_media/os_media.services.yml
+++ b/profile/modules/os/modules/os_media/os_media.services.yml
@@ -2,3 +2,5 @@ services:
   os_media.lazy_builders:
     class: \Drupal\os_media\OsMediaLazyBuilders
     arguments: ['@entity_type.manager']
+  os_media.media_helper:
+    class: \Drupal\os_media\MediaEntityHelper
