--- a/config/sync/core.entity_view_display.media.image.default.yml
+++ b/config/sync/core.entity_view_display.media.image.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.image.field_image_caption
     - field.field.media.image.field_media_image
     - field.field.media.image.field_taxonomy_terms
     - image.style.thumbnail
@@ -25,6 +26,13 @@ content:
       custom_date_format: ''
       timezone: ''
     third_party_settings: {  }
+  field_image_caption:
+    weight: 7
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
+    region: content
   field_taxonomy_terms:
     weight: 6
     label: above
