--- a/profile/modules/os/modules/os_rest/os_rest.services.yml
+++ b/profile/modules/os/modules/os_rest/os_rest.services.yml
@@ -3,7 +3,7 @@ services:
     class: Drupal\os_rest\Normalizer\OsMediaNormalizer
     tags:
       - { name: normalizer, priority: 2 }
-    arguments: ['@entity.manager', '@entity_type.manager', '@current_route_match', '@file_system']
+    arguments: ['@entity.manager', '@entity_type.manager', '@current_route_match', '@file_system', '@os_media.media_helper']
   os_rest.content_type_header_matcher:
     class: Drupal\os_rest\Routing\ContentTypeHeaderMatcher
     public: false
