--- a/config/sync/views.view.publication_years.yml
+++ b/config/sync/views.view.publication_years.yml
@@ -5,6 +5,7 @@ dependencies:
   module:
     - bibcite_entity
     - group
+    - os_pager
     - vsite
 id: publication_years
 label: 'Publication years'
@@ -46,23 +47,26 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: os_pager
         options:
           items_per_page: 10
           offset: 0
-          id: 2
-          total_pages: null
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
+          id: '2'
+          total_pages: ''
           tags:
             previous: ‹‹
             next: ››
+            first: '« First'
+            last: 'Last »'
+          expose:
+            items_per_page: 0
+            items_per_page_label: 'Items per page'
+            items_per_page_options: '5, 10, 25, 50'
+            items_per_page_options_all: 0
+            items_per_page_options_all_label: '- All -'
+            offset: 0
+            offset_label: Offset
+          quantity: '9'
       style:
         type: default
         options:
