Issue #12175: Fix - Vsite admin not able to add widgets

--- a/profile/modules/apps/os_widgets/os_widgets.routing.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.routing.yml
@@ -17,10 +17,10 @@ os_widgets.reset_layout:
     _group_permission: 'manage layout'
     _group_member: 'TRUE'
 os_widgets.create_widget:
-  path: '/cp/layout/create/{block_type}'
+  path: '/cp/layout/create/{block_content_type}'
   defaults:
-    _controller: '\Drupal\os_widgets\Controller\WidgetLibraryController::createBlock'
-    _title: 'Create block'
+    _controller: '\Drupal\block_content\Controller\BlockContentController::addForm'
+    _title_callback: 'Drupal\block_content\Controller\BlockContentController::getAddFormTitle'
   requirements:
     _group_permission: 'manage layout'
     _group_member: 'TRUE'
