Issue #12175: Code refactoring
cp_taxonomy_taxonomy_term_access now uses `checkAccess`, thus
encouraging SRP.

--- a/profile/modules/cp/modules/cp_taxonomy/cp_taxonomy.info.yml
+++ b/profile/modules/cp/modules/cp_taxonomy/cp_taxonomy.info.yml
@@ -5,3 +5,4 @@ description: Taxonomy Management from the Control Panel
 dependencies:
   - "drupal:vsite"
   - "drupal:term_reference_tree"
+  - drupal:os
