Issue #12175: Vsite admin access to administer block_content

--- a/config/sync/group.role.personal-administrator.yml
+++ b/config/sync/group.role.personal-administrator.yml
@@ -230,3 +230,15 @@ permissions:
   413: 'administer cp settings'
   414: 'promote nodes'
   415: 'administer apps settings'
+  416: 'create group_entity:block_content entity'
+  417: 'delete any group_entity:block_content entity'
+  418: 'delete own group_entity:block_content entity'
+  419: 'update any group_entity:block_content entity'
+  420: 'update own group_entity:block_content entity'
+  421: 'view group_entity:block_content entity'
+  422: 'create group_entity:block_content content'
+  423: 'delete any group_entity:block_content content'
+  424: 'delete own group_entity:block_content content'
+  425: 'update any group_entity:block_content content'
+  426: 'update own group_entity:block_content content'
+  427: 'view group_entity:block_content content'
