--- a/composer.json
+++ b/composer.json
@@ -197,7 +197,6 @@
         "drupal/redirect": "^1.3",
         "drupal/toolbar_menu": "^2.1",
         "drupal/views_accordion": "^1.1",
-        "drupal/slick": "^1.0",
         "kenwheeler/slick": "master@dev",
         "drupal/block_visibility_groups": "^1.3",
         "mreq/slick-lightbox": "master",
@@ -258,7 +257,10 @@
         "drupal/colordialog": "^1.2",
         "oomphinc/composer-installers-extender": "^1.1",
         "npm-asset/chosen-js": "^1.8",
-        "drupal/robotstxt": "^1.2"
+        "drupal/robotstxt": "^1.2",
+        "drupal/blazy": "^2.0",
+        "drupal/slick": "^2.0",
+        "drupal/slick_paragraphs": "^2.0"
     },
     "require-dev": {
         "drupal/features": "^3.7",
