--- a/config/sync/core.entity_view_display.paragraph.slideshow.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.slideshow.default.yml
@@ -3,102 +3,72 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.slideshow.field_slide_heading
-    - field.field.paragraph.slideshow.field_slide_images
-    - field.field.paragraph.slideshow.field_slide_subheading
+    - field.field.paragraph.slideshow.field_slide_alt_text
+    - field.field.paragraph.slideshow.field_slide_description
+    - field.field.paragraph.slideshow.field_slide_headline
+    - field.field.paragraph.slideshow.field_slide_image
+    - field.field.paragraph.slideshow.field_slide_link
+    - field.field.paragraph.slideshow.field_slide_title_text
     - paragraphs.paragraphs_type.slideshow
   module:
-    - slick
+    - layout_builder
+    - link
+third_party_settings:
+  layout_builder:
+    sections: {  }
 id: paragraph.slideshow.default
 targetEntityType: paragraph
 bundle: slideshow
 mode: default
 content:
-  field_slide_heading:
-    weight: 0
-    label: inline
+  field_slide_alt_text:
+    weight: 6
+    label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
-  field_slide_images:
-    weight: 2
-    label: hidden
+  field_slide_description:
+    weight: 5
+    label: above
     settings:
-      style: ''
-      optionset: default
-      optionset_thumbnail: ''
-      skin: default
-      skin_thumbnail: ''
-      image_style: large
-      thumbnail_style: ''
-      responsive_image_style: ''
-      thumbnail_effect: ''
-      thumbnail_position: ''
-      media_switch: ''
-      ratio: ''
-      grid: null
-      grid_medium: null
-      grid_small: null
-      visible_items: null
-      layout: ''
-      thumbnail_caption: ''
-      caption:
-        title: title
-        alt: '0'
-      cache: 0
-      sizes: ''
-      breakpoints:
-        xs:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        sm:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        md:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        lg:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        xl:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-      current_view_mode: default
-      background: false
-      grid_header: ''
-      preserve_keys: false
-      override: false
-      overridables:
-        arrows: '0'
-        autoplay: '0'
-        dots: '0'
-        draggable: '0'
-        infinite: '0'
-        mouseWheel: '0'
-        randomize: '0'
-        variableWidth: '0'
-      skin_arrows: ''
-      skin_dots: ''
-      iframe_lazy: true
-      icon: ''
-      view_mode: ''
-      box_caption: ''
-      box_caption_custom: ''
-      box_style: ''
-      box_media_style: ''
+      link_to_entity: false
     third_party_settings: {  }
-    type: slick_image
+    type: string
     region: content
-  field_slide_subheading:
-    weight: 1
-    label: inline
+  field_slide_headline:
+    weight: 3
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_slide_image:
+    type: entity_reference_entity_view
+    weight: 2
+    label: above
+    settings:
+      view_mode: slideshow_wide
+      link: false
+    third_party_settings: {  }
+    region: content
+  field_slide_link:
+    weight: 4
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
+    region: content
+  field_slide_title_text:
+    weight: 7
+    label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
