--- a/config/sync/field.storage.paragraph.field_slide_alt_text.yml
+++ b/config/sync/field.storage.paragraph.field_slide_alt_text.yml
@@ -1,11 +1,11 @@
-uuid: 6b35dcca-37a0-420b-8404-40f4422366fe
+uuid: 9f84f108-6cb9-43be-ac0b-34a89b56e95a
 langcode: en
 status: true
 dependencies:
   module:
     - paragraphs
-id: paragraph.field_slide_heading
-field_name: field_slide_heading
+id: paragraph.field_slide_alt_text
+field_name: field_slide_alt_text
 entity_type: paragraph
 type: string
 settings:
