--- a/composer.json
+++ b/composer.json
@@ -31,40 +31,6 @@
             "url": "https://github.com/openscholar/groupmenu"
         },
         {
-            "type": "package",
-            "package": {
-                "name": "kenwheeler/slick",
-                "version": "master",
-                "type": "drupal-library",
-                "dist": {
-                    "url": "https://github.com/kenwheeler/slick/archive/master.zip",
-                    "type": "zip"
-                },
-                "source": {
-                    "url": "https://github.com/kenwheeler/slick.git",
-                    "type": "git",
-                    "reference": "master"
-                }
-            }
-        },
-        {
-            "type": "package",
-            "package": {
-                "name": "mreq/slick-lightbox",
-                "version": "master",
-                "type": "drupal-library",
-                "dist": {
-                    "url": "https://github.com/mreq/slick-lightbox/archive/master.zip",
-                    "type": "zip"
-                },
-                "source": {
-                    "url": "https://github.com/mreq/slick-lightbox.git",
-                    "type": "git",
-                    "reference": "master"
-                }
-            }
-        },
-        {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
         },
@@ -198,9 +164,7 @@
         "drupal/toolbar_menu": "^2.1",
         "drupal/views_accordion": "^1.1",
         "drupal/slick": "^1.0",
-        "kenwheeler/slick": "master@dev",
         "drupal/block_visibility_groups": "^1.3",
-        "mreq/slick-lightbox": "master",
         "drupal/image_widget_crop": "^2.2",
         "zaporylie/composer-drupal-optimizations": "^1.0",
         "drupal/metatag": "^1.7",
@@ -258,7 +222,9 @@
         "drupal/colordialog": "^1.2",
         "oomphinc/composer-installers-extender": "^1.1",
         "npm-asset/chosen-js": "^1.8",
-        "drupal/robotstxt": "^1.2"
+        "drupal/robotstxt": "^1.2",
+        "npm-asset/slick-carousel": "^1.8",
+        "npm-asset/slick-lightbox": "^0.2.10"
     },
     "require-dev": {
         "drupal/features": "^3.7",
@@ -330,6 +296,12 @@
         "installer-paths": {
             "web/libraries/chosen": [
                 "npm-asset/chosen-js"
+            ],
+            "web/libraries/slick": [
+                "npm-asset/slick-carousel"
+            ],
+            "web/libraries/slick-lightbox": [
+                "npm-asset/slick-lightbox"
             ],
             "web/core": ["type:drupal-core"],
             "web/libraries/{$name}": ["type:drupal-library"],
