--- a/composer.json
+++ b/composer.json
@@ -198,7 +198,7 @@
         "drupal/toolbar_menu": "^2.1",
         "drupal/views_accordion": "^1.1",
         "drupal/slick": "^1.0",
-        "kenwheeler/slick": "master@dev",
+        "kenwheeler/slick": "^1.6",
         "drupal/block_visibility_groups": "^1.3",
         "mreq/slick-lightbox": "master",
         "drupal/image_widget_crop": "^2.2",
