--- a/config/sync/group.role.personal-member.yml
+++ b/config/sync/group.role.personal-member.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - group.type.personal
 id: personal-member
-label: 'Basic member'
+label: 'Viewer'
 weight: -100
 internal: false
 audience: member
