--- a/composer.json
+++ b/composer.json
@@ -34,16 +34,11 @@
             "type": "package",
             "package": {
                 "name": "kenwheeler/slick",
-                "version": "master",
+                "version": "1.6.0",
                 "type": "drupal-library",
                 "dist": {
-                    "url": "https://github.com/kenwheeler/slick/archive/master.zip",
+                    "url": "https://github.com/kenwheeler/slick/archive/1.6.0.zip",
                     "type": "zip"
-                },
-                "source": {
-                    "url": "https://github.com/kenwheeler/slick.git",
-                    "type": "git",
-                    "reference": "master"
                 }
             }
         },
@@ -198,7 +193,7 @@
         "drupal/toolbar_menu": "^2.1",
         "drupal/views_accordion": "^1.1",
         "drupal/slick": "^1.0",
-        "kenwheeler/slick": "^1.6",
+        "kenwheeler/slick": "1.6.0",
         "drupal/block_visibility_groups": "^1.3",
         "mreq/slick-lightbox": "master",
         "drupal/image_widget_crop": "^2.2",
