Issue #12372: fixed alt tag and color contrast issues (#12374)
* Issue #12372: fixed alt tag and color contrast issues

* Issue #12372 - fixes accessibility fixes

* Issue #12372 - fix code

* Issue #12372: added translate to string

--- a/config/sync/field.field.block_content.addthis.field_addthis_display_style.yml
+++ b/config/sync/field.field.block_content.addthis.field_addthis_display_style.yml
@@ -12,7 +12,7 @@ field_name: field_addthis_display_style
 entity_type: block_content
 bundle: addthis
 label: 'Display style'
-description: '[os_widgets:addthis_display_style_description]'
+description: ''
 required: true
 translatable: false
 default_value:
