--- a/profile/modules/apps/os_profiles/config/schema/os_profiles.schema.yml
+++ b/profile/modules/apps/os_profiles/config/schema/os_profiles.schema.yml
@@ -8,7 +8,7 @@ os_profiles.settings:
     disable_default_image:
       type: boolean
       label: 'Disable default image'
-    default_image_mid:
+    default_image_fid:
       type: integer
       label: 'Default image'
     image_crop_applied:
