Issue #12246 - Store group role description in backend

--- a/config/sync/group.role.personal-administrator.yml
+++ b/config/sync/group.role.personal-administrator.yml
@@ -11,6 +11,7 @@ internal: false
 audience: member
 group_type: personal
 permissions_ui: true
+description: '<em>Administrators</em> may add, edit or delete any post, and change site settings.'
 permissions:
   0: 'manage cp appearance'
   1: 'manage cp users'
