Issue #12380 - accessibility fixes added description to markup… (#12395)
* Issue #12380 - accessibility fixes added descriptn to markp in code

* Issue #12380 - fixed tranlation

--- a/config/sync/field.field.block_content.publication_types.field_types_whitelist.yml
+++ b/config/sync/field.field.block_content.publication_types.field_types_whitelist.yml
@@ -12,7 +12,7 @@ field_name: field_types_whitelist
 entity_type: block_content
 bundle: publication_types
 label: 'Show the following types'
-description: 'Select the types you want to appear in the widget.'
+description: ''
 required: true
 translatable: false
 default_value: {  }
