Issue #12337 - fixed previous arrow and fixed image style issue (#12399)
* Issue #12337 - fixed previous arrow and fixed image style issue

* Issue #12337 - updated slick carousel library

--- a/config/sync/core.entity_view_display.block_content.media_gallery.carousel.yml
+++ b/config/sync/core.entity_view_display.block_content.media_gallery.carousel.yml
@@ -37,7 +37,7 @@ content:
       optionset_thumbnail: ''
       skin: default
       skin_thumbnail: ''
-      image_style: medium
+      image_style: gallery
       thumbnail_style: ''
       responsive_image_style: ''
       thumbnail_effect: ''
