--- a/composer.json
+++ b/composer.json
@@ -15,18 +15,6 @@
             "url": "https://github.com/openscholar/purl-d8"
         },
         {
-            "type": "package",
-            "package": {
-                "name": "kenwheeler/slick",
-                "version": "1.6.0",
-                "type": "drupal-library",
-                "dist": {
-                    "url": "https://github.com/kenwheeler/slick/archive/1.6.0.zip",
-                    "type": "zip"
-                }
-            }
-        },
-        {
             "type": "vcs",
             "url": "https://github.com/openscholar/views_ical"
         },
@@ -193,7 +181,6 @@
         "drupal/toolbar_menu": "^2.1",
         "drupal/views_accordion": "^1.1",
         "drupal/slick": "^1.0",
-        "kenwheeler/slick": "1.6.0",
         "drupal/block_visibility_groups": "^1.3",
         "mreq/slick-lightbox": "master",
         "drupal/image_widget_crop": "^2.2",
@@ -253,7 +240,8 @@
         "drupal/colordialog": "^1.2",
         "oomphinc/composer-installers-extender": "^1.1",
         "npm-asset/chosen-js": "^1.8",
-        "drupal/robotstxt": "^1.2"
+        "drupal/robotstxt": "^1.2",
+        "npm-asset/slick-carousel": "^1.8.0"
     },
     "require-dev": {
         "drupal/features": "^3.7",
@@ -325,6 +313,9 @@
         "installer-paths": {
             "web/libraries/chosen": [
                 "npm-asset/chosen-js"
+            ],
+            "web/libraries/slick": [
+                "npm-asset/slick-carousel"
             ],
             "web/core": ["type:drupal-core"],
             "web/libraries/{$name}": ["type:drupal-library"],
