--- a/config/sync/metatag.metatag_defaults.global.yml
+++ b/config/sync/metatag.metatag_defaults.global.yml
@@ -13,6 +13,7 @@ tags:
   shortcut_icon: '[vsite:site_favicon]'
   og_type: '[vsite:site_type]'
   og_image: '[vsite:site_logo]'
+  og_title: '[os_metatag:site_title]'
   twitter_cards_image: '[vsite:site_logo]'
   twitter_cards_description: '[vsite:site_description]'
   twitter_cards_title: '[os_metatag:site_title]'
