Issue #12123 - Fix permission

--- a/profile/modules/apps/os_widgets/os_widgets.routing.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.routing.yml
@@ -45,4 +45,4 @@ os_widgets.add_slideshow:
     _form: 'Drupal\os_widgets\Form\AddSlideshowForm'
     _title: 'Add new slideshow'
   requirements:
-    _permission: 'access content'
+    _group_permission: 'manage layout'
