Issue #12123 - Remove unused module

--- a/profile/modules/apps/os_widgets/os_widgets.info.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.info.yml
@@ -8,3 +8,5 @@ dependencies:
   - "drupal:os_twitter_pull"
   - "drupal:cp_taxonomy"
   - "drupal:os_pager"
+  - "drupal:paragraphs"
+  - "drupal:slick"
