--- a/config/sync/core.entity_view_display.media.audio.default.yml
+++ b/config/sync/core.entity_view_display.media.audio.default.yml
@@ -8,25 +8,27 @@ dependencies:
     - image.style.thumbnail
     - media.type.audio
   module:
+    - file
     - image
-    - user
+    - layout_builder
+third_party_settings:
+  layout_builder:
+    sections: {  }
 id: media.audio.default
 targetEntityType: media
 bundle: audio
 mode: default
 content:
-  created:
-    label: hidden
-    type: timestamp
+  field_media_file:
+    type: file_default
     weight: 0
     region: content
+    label: visually_hidden
     settings:
-      date_format: medium
-      custom_date_format: ''
-      timezone: ''
+      use_description_as_link_text: true
     third_party_settings: {  }
   field_taxonomy_terms:
-    weight: 6
+    weight: 2
     label: above
     settings:
       link: true
@@ -35,21 +37,15 @@ content:
     region: content
   thumbnail:
     type: image
-    weight: 5
+    weight: 1
     label: hidden
     settings:
       image_style: thumbnail
       image_link: ''
     region: content
     third_party_settings: {  }
-  uid:
-    label: hidden
-    type: author
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
-  field_media_file: true
+  created: true
   langcode: true
   name: true
+  uid: true
