--- a/config/sync/core.entity_view_display.media.executable.default.yml
+++ b/config/sync/core.entity_view_display.media.executable.default.yml
@@ -8,13 +8,17 @@ dependencies:
     - media.type.executable
   module:
     - file
+    - layout_builder
+third_party_settings:
+  layout_builder:
+    sections: {  }
 id: media.executable.default
 targetEntityType: media
 bundle: executable
 mode: default
 content:
   field_media_file:
-    type: file_table
+    type: file_default
     weight: 0
     region: content
     label: hidden
