--- a/config/sync/core.entity_view_display.media.video.default.yml
+++ b/config/sync/core.entity_view_display.media.video.default.yml
@@ -8,54 +8,40 @@ dependencies:
     - field.field.media.video.field_media_video_file
     - field.field.media.video.field_taxonomy_terms
     - field.field.media.video.field_width
-    - image.style.thumbnail
     - media.type.video
   module:
-    - image
-    - user
+    - file
+    - layout_builder
+third_party_settings:
+  layout_builder:
+    sections: {  }
 id: media.video.default
 targetEntityType: media
 bundle: video
 mode: default
 content:
-  created:
-    label: hidden
-    type: timestamp
+  field_media_video_file:
+    type: file_default
     weight: 0
     region: content
+    label: visually_hidden
     settings:
-      date_format: medium
-      custom_date_format: ''
-      timezone: ''
+      use_description_as_link_text: true
     third_party_settings: {  }
   field_taxonomy_terms:
-    weight: 6
+    weight: 1
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  thumbnail:
-    type: image
-    weight: 5
-    label: hidden
-    settings:
-      image_style: thumbnail
-      image_link: ''
-    region: content
-    third_party_settings: {  }
-  uid:
-    label: hidden
-    type: author
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
+  created: true
   field_height: true
   field_media_oembed_video: true
-  field_media_video_file: true
   field_width: true
   langcode: true
   name: true
+  thumbnail: true
+  uid: true
