Issue #12123 - Fix access checking

--- a/profile/modules/apps/os_widgets/os_widgets.routing.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.routing.yml
@@ -49,5 +49,4 @@ os_widgets.add_slideshow:
       block_content:
         type: entity:block_content
   requirements:
-    _group_permission: 'manage layout'
-    _group_member: 'TRUE'
+    _custom_access: 'Drupal\os_widgets\Form\AddSlideshowForm::access'
