--- a/config/sync/core.entity_form_display.block_content.slideshow.default.yml
+++ b/config/sync/core.entity_form_display.block_content.slideshow.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.block_content.slideshow.body
     - field.field.block_content.slideshow.field_slideshow
     - field.field.block_content.slideshow.field_slideshow_layout
+    - field.field.block_content.slideshow.field_widget_title
   module:
     - content_moderation
     - field_layout
@@ -24,7 +25,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 101
+    weight: 4
     settings:
       rows: 9
       summary_rows: 3
@@ -32,7 +33,7 @@ content:
     third_party_settings: {  }
     region: content
   field_slideshow:
-    weight: 102
+    weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -51,14 +52,22 @@ content:
     type: paragraphs
     region: content
   field_slideshow_layout:
-    weight: 103
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
     region: content
+  field_widget_title:
+    weight: 0
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   info:
     type: string_textfield
-    weight: -5
+    weight: 1
     region: content
     settings:
       size: 60
@@ -73,7 +82,7 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 3
     settings: {  }
     region: content
     third_party_settings: {  }
