--- a/composer.json
+++ b/composer.json
@@ -241,6 +241,7 @@
         "oomphinc/composer-installers-extender": "^1.1",
         "npm-asset/chosen-js": "^1.8",
         "drupal/robotstxt": "^1.2",
+        "ezyang/htmlpurifier": "^4.11.0",
         "npm-asset/slick-carousel": "^1.8.0"
     },
     "require-dev": {
