--- a/profile/modules/os/modules/os_wysiwyg/os_wysiwyg.services.yml
+++ b/profile/modules/os/modules/os_wysiwyg/os_wysiwyg.services.yml
@@ -2,3 +2,6 @@ services:
   os_wysiwyg.os_link_helper:
     class: Drupal\os_wysiwyg\OsLinkHelper
     arguments: ['@stream_wrapper_manager']
+
+  os_wysiwyg.os_purifyhtml:
+    class: Drupal\os_wysiwyg\PurifyHtmlHelper
