Issue #11896 - Attached file fixes.

--- a/config/sync/config_split.config_split.local.yml
+++ b/config/sync/config_split.config_split.local.yml
@@ -15,6 +15,7 @@ blacklist:
   - 'block.block.booknavigation*'
   - 'block.block.entityviewcontent*'
 graylist:
+  - os_media.settings
   - os_publications.settings
 graylist_dependents: true
 graylist_skip_equal: true
