Issue #12319 - fixed lightbox issue and arrow consistancy (#12418)
* Issue #12319 - fixed lightbox issue and arrow consistancy

* Issue #12319 - fixed accessibility issue

--- a/profile/themes/os_base/os_base.libraries.yml
+++ b/profile/themes/os_base/os_base.libraries.yml
@@ -12,3 +12,10 @@ modal:
   dependencies:
     - core/jquery
     - core/drupal.dialog.ajax
+
+slick:
+  css:
+    base:
+      /libraries/slick/slick/slick.css: {}
+    theme:
+      /libraries/slick/slick/slick-theme.css: {}
