--- a/composer.json
+++ b/composer.json
@@ -187,7 +187,7 @@
         "drupal/config_sync": "^2.0@alpha",
         "drupal/console": "^1.0.2",
         "drupal/context": "^4.0@beta",
-        "drupal/core": "8.6.16",
+        "drupal/core": "^8.7.8",
         "drupal/date_recur": "^2.0",
         "drupal/date_recur_modular": "^1.0@alpha",
         "drupal/easy_breadcrumb": "^1.8",
@@ -227,7 +227,7 @@
         "drupal/views_ical": "^2.1",
         "drupal/views_infinite_scroll": "^1.5",
         "drush/drush": "^9.0.0",
-        "egulias/email-validator": "1.2.6",
+        "egulias/email-validator": "^2.0",
         "ezyang/htmlpurifier": "^4.11",
         "fullcalendar/fullcalendar": "^3.3",
         "j7mbo/twitter-api-php": "^1.0",
@@ -240,13 +240,13 @@
         "twbs/bootstrap-sass": "^3.3.7",
         "twig/extensions": "^1.5",
         "vlucas/phpdotenv": "^2.4",
+        "webflo/drupal-core-require-dev": "^8.7.8",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
         "zaporylie/composer-drupal-optimizations": "^1.0"
     },
     "require-dev": {
         "drupal/features": "^3.7",
-        "webflo/drupal-core-require-dev": "8.6.16",
         "drupal/devel": "^1.2",
         "weitzman/drupal-test-traits": "dev-pass-chrome-driver-options",
         "dmore/chrome-mink-driver": "^2.6"
