Issue #12123 - Add new access service and connect to routing yml

--- a/profile/modules/apps/os_widgets/os_widgets.routing.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.routing.yml
@@ -45,4 +45,4 @@ os_widgets.add_slideshow:
       block_content:
         type: entity:block_content
   requirements:
-    _custom_access: 'Drupal\os_widgets\Form\AddSlideshowForm::access'
+    _add_slideshow_access_check: 'TRUE'
