--- a/profile/modules/apps/os_widgets/os_widgets.services.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.services.yml
@@ -13,3 +13,8 @@ services:
     arguments: ['@request_stack', '@current_user', '@vsite.context_manager']
     tags:
       - { name: event_subscriber }
+  os.add_slideshow_access:
+    class: Drupal\os_widgets\Access\AddSlideshowAccessCheck
+    arguments: ['@current_user', '@entity_type.manager', '@vsite.context_manager']
+    tags:
+      - { name: access_check, applies_to: _add_slideshow_access_check }
