--- a/config/sync/field.field.node.presentation.field_presentation_slides.yml
+++ b/config/sync/field.field.node.presentation.field_presentation_slides.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_presentation_slides
-    - media.type.presentation_materials
+    - media.type.document
     - node.type.presentation
 id: node.presentation.field_presentation_slides
 field_name: field_presentation_slides
@@ -20,7 +20,7 @@ settings:
   handler: 'default:media'
   handler_settings:
     target_bundles:
-      presentation_materials: presentation_materials
+      document: document
     sort:
       field: _none
     auto_create: false
