Issue #12330 - Fix - Basic member cannot see option to add content

--- a/config/sync/group.role.personal-enhanced_basic_member.yml
+++ b/config/sync/group.role.personal-enhanced_basic_member.yml
@@ -132,4 +132,5 @@ permissions:
   - 'create new books'
   - 'create url aliases'
   - 'promote nodes'
+  - 'access control panel'
 description: '<em>Basic members</em> may only add new posts and edit their own posts.'
