Issue #12330 - Ability to set node status for vsite roles

--- a/profile/modules/os/os.group.permissions.yml
+++ b/profile/modules/os/os.group.permissions.yml
@@ -12,3 +12,8 @@ promote nodes:
   title: 'Promote content'
   description: 'Promote content across all content types.'
   section: 'Permission'
+
+publish nodes:
+  title: 'Publish content'
+  description: 'Publish content across all content types.'
+  section: 'Permission'
