--- a/config/sync/group.role.personal-enhanced_basic_member.yml
+++ b/config/sync/group.role.personal-enhanced_basic_member.yml
@@ -77,4 +77,5 @@ permissions:
   118: 'create url aliases'
   119: 'promote nodes'
   120: 'access control panel'
+  121: 'publish nodes'
 description: '<em>Basic members</em> may only add new posts and edit their own posts.'
