--- a/composer.json
+++ b/composer.json
@@ -153,22 +153,6 @@
             }
         },
         {
-            "type": "package",
-            "package": {
-                "name": "dinbror/blazy",
-                "version": "1.8.2",
-                "type": "drupal-library",
-                "extra": {
-                    "installer-name": "blazy"
-                },
-                "source": {
-                    "type": "git",
-                    "url": "https://github.com/dinbror/blazy",
-                    "reference": "1.8.2"
-                }
-            }
-        },
-        {
             "type": "composer",
             "url": "https://asset-packagist.org"
         }
@@ -185,7 +169,6 @@
         "ckeditor/panelbutton": "4.11.3",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
-        "dinbror/blazy": "^1.8",
         "doctrine/lexer": "dev-master",
         "drupal-composer/drupal-scaffold": "^2.6",
         "drupal/admin_toolbar": "^1.25",
@@ -250,6 +233,7 @@
         "fullcalendar/fullcalendar": "^3.3",
         "j7mbo/twitter-api-php": "^1.0",
         "mreq/slick-lightbox": "master",
+        "npm-asset/blazy": "^1.8",
         "npm-asset/chosen-js": "^1.8",
         "npm-asset/slick-carousel": "^1.8",
         "oomphinc/composer-installers-extender": "^1.1",
@@ -338,6 +322,9 @@
             ],
             "web/libraries/slick": [
                 "npm-asset/slick-carousel"
+            ],
+            "web/libraries/blazy": [
+                "npm-asset/blazy"
             ],
             "web/core": ["type:drupal-core"],
             "web/libraries/{$name}": ["type:drupal-library"],
