--- a/composer.json
+++ b/composer.json
@@ -236,6 +236,7 @@
         "npm-asset/slick-carousel": "^1.8",
         "oomphinc/composer-installers-extender": "^1.1",
         "php-ds/php-ds": "^1.2",
+        "rrssb/rrssb-plus": "^0.5.0",
         "swordapp/swordappv2-php-library": "master",
         "twbs/bootstrap-sass": "^3.3.7",
         "twig/extensions": "^1.5",
